--- a/app/src/main/assets/ReadMe
+++ b/app/src/main/assets/ReadMe
@@ -4,6 +4,6 @@
 2. Alarm for local messages Done
 3. App update
 4. Entertainment List & Astrology, Sport
-5. Google Analytics
+5. Google Analytics almost done
 6. Image for empty data and load imges logo also
 7. Latest News Load
