Change News Style

--- a/app/src/main/assets/ReadMe
+++ b/app/src/main/assets/ReadMe
@@ -1,9 +1,9 @@
 
 
-1. Alarm for Delete messages
+1. Alarm for Delete messages Done
 2. Alarm for local messages Done
 3. App update
 4. Entertainment List & Astrology, Sport
 5. Google Analytics almost done
 6. Image for empty data and load imges logo also
-7. Latest News Load
+7. Latest News Load Done
