--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
 	<!-- AdMob ad unit IDs -->
     <string name="banner_home_footer">ca-app-pub-8430026697006000/2824055773</string>
     <string name="interstitial_full_screen">ca-app-pub-8430026697006000/4300788971</string>
+    <string name="no_data_avail">No Data Available!</string>
+    <string name="no_fav_avail">No Favourite Available!</string>
 </resources>
