--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="interstitial_full_screen">ca-app-pub-8430026697006000/4300788971</string>
     <string name="no_data_avail">No Data Available!</string>
     <string name="no_fav_avail">No Favourite Available!</string>
+    <string name="my_email">mht.suthar@gmail.com</string>
 </resources>
