--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="no_data_avail">No Data Available!</string>
     <string name="no_fav_avail">No Favourite Available!</string>
     <string name="my_email">mht.suthar@gmail.com</string>
+    <string name="design_and_develop">Design And Developed By Mohit Suthar</string>
 </resources>
