--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="no_fav_avail">No Favourite Available!</string>
     <string name="my_email">mht.suthar@gmail.com</string>
     <string name="design_and_develop">Design And Developed By Mohit Suthar</string>
+    <string name="please_wait">Please wait a while, we are loading all news for you, It will take only one time.</string>
 </resources>
