--- a/app/src/main/assets/ReadMe
+++ b/app/src/main/assets/ReadMe
@@ -1,9 +1,12 @@
+Keystore Details
+Alias : Vagad
+Pass: com.vagad
+Organization something Name: Mohit Suthar
 
 
-1. Alarm for Delete messages Done
-2. Alarm for local messages Done
-3. App update
-4. Entertainment List & Astrology, Sport
-5. Google Analytics almost done
-6. Image for empty data and load imges logo also
-7. Latest News Load Done
+
+
+
+
+1. App update
+2. Entertainment List & Astrology, Sport
