--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="no_data_avail">No Data Available!</string>
     <string name="no_fav_avail">No Favourite Available!</string>
     <string name="my_email">mht.suthar@gmail.com</string>
-    <string name="design_and_develop">Design And Developed By Mohit Suthar</string>
+    <string name="design_and_develop">Design And Developed By Vagad-Droid</string>
     <string name="please_wait">Please wait a while, we are loading all news for you, It will take only one time.</string>
     <string name="more_read_news">More read from Rajasthan Patrika</string>
     <string name="rate_title">Rate our Vagad App</string>
